	required for the development of linearized (optomised) pdf

  * Implemented better use of autoconf

  * Changed the return value of adddictitem from a void to a dictionary *.
	This should not affect existing users because of the change from void,
	but allows the lexer to easily manipulate the pdf document as it
	reads it in.

  * Added the suppressed pdfopen option for the benefit of the lexer. This will
	not affect existing users.

  * Fixed erroneous image placement code which resulted in unpredictable image
	location on pages

  * Fixed a libjpeg usage bug that was causing memory corruption...

  * Improved tiff support and tested it against a whole bunch of tiff images to
	make sure that it works. The following things were tested to determine
	their affect on the pdf viewers and the library (both xpdf and
	acrobat were tested as these seem to be the two major viewers).
	
	* Fillorder (MSB2LSB vs LSB2MSB)
	* Photometric interpretation (MINISWHITE vs MINISBLACK)
	* Number of strips (PDF only supports single strip tiffs)
	* Endian-ness (big endian vs little endian)

	The following are not currently tested because they cause strange
	errors from tiffcp (files much too small to be real):
	* Planar config (contiguous or separate)

	The following compression schemes have been tested so far:
	* CCITT Fax Group 3
	* CCITT Fax Group 4
	* Uncompressed
	* Packbits
	* JPEG
	* zip (flate)
	* LZW (unsupported and should exit with an error message)

	If you find a tiff image that does not work, then please send me a copy
	so that I can test it to see what happens. If that is not possible,
	then please make sure you have libtiff installed and then run
	tiffinfo and tiffdump against the image and send me the output of that.
	I can be reached at mikal@stillhq.com...

	The testimages I used may be found in the testdata directory, and are
	generated using the makeimages script in that directory. To clean up,
	use the removeimages script.








