@@ -42,6 +42,8 @@ Release 0.2 -> Release 0.3
 	The following compression schemes have been tested so far:
 	* CCITT Fax Group 3
 	* CCITT Fax Group 4
+
+	The following compressions schemes are still not supported:
 	* Uncompressed
 	* Packbits
 	* JPEG
